# ndkdemo

./: READ.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/piaozhe/ndkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniNative.cpp  native-lib.cpp  nativeactivity.cpp
app/src/main/cpp/include/: log_util.h  nativeactivity.h
app/src/main/cpp/sign/: nativesign.cpp  nativesign.h
app/src/main/java/com/example/piaozhe/ndkdemo/: AnimActivity.java  App.kt  CameraActivity.kt  DTest.java  Main2Activity.kt  MainActivity.kt  NativeActivity.kt  PathQuadToActivity.kt  ProgressActivity.kt  RotateActivity.kt  ViewActivity.kt
app/src/main/java/com/example/piaozhe/ndkdemo/animui/: StartAnimActivity.java
app/src/main/java/com/example/piaozhe/ndkdemo/bean/: Person.java  RoundPointBean.java
app/src/main/java/com/example/piaozhe/ndkdemo/constant/: Constant.kt
app/src/main/java/com/example/piaozhe/ndkdemo/jni/: JniNative.kt  JniNativeActivity.kt
app/src/main/java/com/example/piaozhe/ndkdemo/media/: AudioActivity.kt  (+1 more)
app/src/main/java/com/zhep/demo/: DefaultTest.java
app/src/main/res/layout/: activity_anim.xml  activity_audio.xml  activity_camera2.xml  activity_camera3.xml  activity_jni_native.xml  activity_main.xml  activity_main2.xml  activity_opengl.xml  activity_path_quad_to.xml  activity_progress.xml  activity_rotate.xml  activity_start_anim.xml  activity_view.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/piaozhe/ndkdemo/: ExampleUnitTest.kt
(+27 files in other folders)
